--- a/Prototype Cell/Base.lproj/Main.storyboard
+++ b/Prototype Cell/Base.lproj/Main.storyboard
@@ -73,16 +73,6 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Iz7-te-oI3">
-                                            <rect key="frame" x="17" y="29" width="46" height="30"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <state key="normal" title="Button">
-                                                <color key="titleColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                                            </state>
-                                            <connections>
-                                                <action selector="next:" destination="qHd-6L-Mt2" eventType="touchUpInside" id="zQN-xN-h2D"/>
-                                            </connections>
-                                        </button>
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
@@ -121,6 +111,9 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="jTf-8o-M1Q"/>
                     </view>
+                    <connections>
+                        <outlet property="photo" destination="gUT-fX-771" id="gKJ-Aq-oWv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GoZ-1W-soO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
